// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tagInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
      >
        <div>
          <div
            class="uv_sjgcm20 uv_sjgcm21"
            data-disabled="false"
            data-error="false"
            data-readonly="false"
            data-success="false"
            tabindex="0"
          >
            <div
              class="uv_sjgcm24"
            >
              <input
                class="uv_sjgcm26"
                data-size="large"
                id="_r_0_"
                name="test"
                placeholder="placeholder"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`tagInputField > should render correctly with regex 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
      >
        <label
          class="uv_l58dz72 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
          for="_r_4_"
        >
          Test
        </label>
        <div>
          <div
            class="uv_sjgcm20 uv_sjgcm21"
            data-disabled="false"
            data-error="false"
            data-readonly="false"
            data-success="false"
            tabindex="0"
          >
            <div
              class="uv_sjgcm24"
            >
              <div
                class="uv_1gaaepy1 uv_xf61n40 uv_xf61n42j"
                style="--uv_1d8tbmb0: fit-content; --uv_1d8tbmb1: 100%;"
              >
                <span
                  class="uv_1gaaepy4 uv_1gaaepy5 uv_1gaaepyb uv_1gaaepyh uv_1gaaepy8"
                >
                  <span
                    class="uv_1gaaepy13 uv_1do42ls0 uv_1do42ls3 uv_1do42ls4 uv_1do42lsb uv_1do42lsp uv_1do42ls1a uv_1do42ls32 uv_1do42ls3e"
                  >
                    4
                  </span>
                </span>
                <button
                  aria-label="Close tag"
                  class="uv_1gaaepy5 uv_1gaaepyb uv_1gaaepyg uv_1gaaepyy"
                  data-testid="close-tag"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                    />
                  </svg>
                </button>
              </div>
              <input
                class="uv_sjgcm26"
                data-size="large"
                id="_r_4_"
                name="test"
                placeholder=""
                type="text"
                value=""
              />
            </div>
            <div
              class="uv_sjgcm25"
            >
              <button
                class="uv_8xt08s0 uv_8xt08s1 uv_8xt08s3 uv_8xt08s8 uv_8xt08sh uv_8xt08sj uv_8xt08s19"
                type="button"
              >
                <span
                  class="uv_ahdbou0"
                >
                  clear value
                </span>
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <button
        class="uv_8xt08s0 uv_8xt08s2 uv_8xt08s3 uv_8xt08s9 uv_8xt08se uv_8xt08si uv_8xt08sl"
        disabled=""
        type="submit"
      >
        Test
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`tagInputField > should works with defaultValues 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
      >
        <label
          class="uv_l58dz72 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
          for="_r_i_"
        >
          Test
        </label>
        <div>
          <div
            class="uv_sjgcm20 uv_sjgcm21"
            data-disabled="false"
            data-error="false"
            data-readonly="false"
            data-success="false"
            tabindex="0"
          >
            <div
              class="uv_sjgcm24"
            >
              <div
                class="uv_1gaaepy1 uv_xf61n40 uv_xf61n42j"
                style="--uv_1d8tbmb0: fit-content; --uv_1d8tbmb1: 100%;"
              >
                <span
                  class="uv_1gaaepy4 uv_1gaaepy5 uv_1gaaepyb uv_1gaaepyh uv_1gaaepy8"
                >
                  <span
                    class="uv_1gaaepy13 uv_1do42ls0 uv_1do42ls3 uv_1do42ls4 uv_1do42lsb uv_1do42lsp uv_1do42ls1a uv_1do42ls32 uv_1do42ls3e"
                  >
                    First
                  </span>
                </span>
                <button
                  aria-label="Close tag"
                  class="uv_1gaaepy5 uv_1gaaepyb uv_1gaaepyg uv_1gaaepyy"
                  data-testid="close-tag"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                    />
                  </svg>
                </button>
              </div>
              <input
                class="uv_sjgcm26"
                data-size="large"
                id="_r_i_"
                name="test"
                placeholder=""
                type="text"
                value=""
              />
            </div>
            <div
              class="uv_sjgcm25"
            >
              <button
                class="uv_8xt08s0 uv_8xt08s1 uv_8xt08s3 uv_8xt08s8 uv_8xt08sh uv_8xt08sj uv_8xt08s19"
                type="button"
              >
                <span
                  class="uv_ahdbou0"
                >
                  clear value
                </span>
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <button
        class="uv_8xt08s0 uv_8xt08s1 uv_8xt08s3 uv_8xt08s9 uv_8xt08se uv_8xt08si uv_8xt08sl"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;
